apps/site/assets/css/_spacing.scss
.w-100 {
  width: 100%;
}

//// PADDING

// Top
.pt-8 {
  padding-top: .5rem;
}

.pt-10 {
  padding-top: .625rem;
}

.pt-14 {
  padding-top: .875rem;
}

.pt-16 {
  padding-top: 1rem;
}

.pt-18 {
  padding-top: 1.125rem;
}

.pt-24 {
  padding-top: 1.5rem;
}
// End Top

// Bottom
.pb-8 {
  padding-bottom: .5rem;
}

.pb-10 {
  padding-bottom: .625rem;
}

.pb-14 {
  padding-bottom: .875rem;
}

.pb-16 {
  padding-bottom: 1rem;
}

.pb-18 {
  padding-bottom: 1.125rem;
}
// End Bottom

// Start
.ps-5 {
  padding-left: .313rem;
}

.ps-16 {
  padding-left: 1rem;
}
// End Start

// End
.pe-5 {
  padding-right: .313rem;
}

.pe-16 {
  padding-right: 1rem;
}
// End End
//// End PADDING

//// MARGINS

.m-24 {
  margin: 1.5rem;
}

// Negative margins need to be turned on in bootstrap 5
.m-n24 {
  margin: -1.5rem;
}

// Top
.mt-8 {
  margin-top: .5rem;
}

.mt-10 {
  margin-top: .625rem;
}

.mt-12 {
  margin-top: .75rem;
}

.mt-16 {
  margin-top: 1rem;
}

.mt-n20 {
  margin-top: -1.25rem;
}
// End Top

// End
.me-5 {
  margin-right: .313rem;
}

.me-8 {
  margin-right: .5rem;
}

.me-12 {
  margin-right: .75rem;
}

.me-14 {
  margin-right: .875rem;
}

.me-16 {
  margin-right: 1rem;
}
// End End
//// End MARGINS

